# itc-platform

./: .gitignore  Makefile.am  README.md  atbuild.sh  calculate-avg-from-file.sh  clean-project.sh  configure.ac  enable-auto-complete.sh
docs/: build-system-integration.md  unittest-integration.md
sw/: Makefile.am
sw/itc-api/if/: itc.h
sw/itc-api/inc/: itcPlatform.h  itc_impl.h
sw/itc-api/src/: Makefile.am  itcPlatform.cc  itc_impl.cc
sw/itc-api/unittest/itcPlatformIfMock/: Makefile.am  itcPlatformIfMock.cc  itcPlatformIfMock.h
sw/itc-api/unittest/itcPlatformIfTest/: Makefile.am  itcPlatformIfTest.cc
sw/itc-api/unittest/mock/itcPlatformIfMock/: Makefile.am  itcPlatformIfMock.h
sw/itc-common/if/: itcCWrapperIf.h  itcFileSystemIf.h  itcThreadManagerIf.h  itcTransportIf.h
sw/itc-common/inc/: itcAdminMessage.h  itcCWrapper.h  itcConcurrentArray.h  itcConcurrentContainer.h  itcConstant.h  itcEthernetProto.h  itcFastMemoryPool.h  itcFileSystem.h  itcLockFreeHashMap.h  itcLockFreeQueue.h  itcMailbox.h  itcMemoryManager.h  itcMutex.h  itcSmartContainer.h  itcSyncObject.h  itcSystemProto.h  itcThreadManager.h  itcThreadPool.h  itcTptProvider.h  itcTransportLSocket.h  itcTransportLocal.h  itcTransportSysvMsgQueue.h
sw/itc-common/src/: Makefile.am  itcCWrapper.cc  itcFileSystem.cc  itcMailbox.cc  itcMutex.cc  itcSyncObject.cc  itcThreadManager.cc  itcTransportLSocket.cc  itcTransportLocal.cc  itcTransportSysvMsgQueue.cc
sw/itc-common/unittest/itcCWrapperIfMock/: Makefile.am  itcCWrapperIfMock.cc  itcCWrapperIfMock.h
sw/itc-common/unittest/itcConcurrentContainerTest/: Makefile.am  itcConcurrentContainerTest.cc
sw/itc-common/unittest/itcFileSystemIfMock/: Makefile.am  itcFileSystemIfMock.cc  itcFileSystemIfMock.h
sw/itc-common/unittest/itcFileSystemIfTest/: Makefile.am  itcFileSystemIfTest.cc
sw/itc-common/unittest/itcFileSystemRealImpl/: Makefile.am
sw/itc-common/unittest/itcFileSystemTest/: Makefile.am  itcFileSystemTest.cc
sw/itc-common/unittest/itcLockFreeHashMapTest/: Makefile.am  itcLockFreeHashMapTest.cc
sw/itc-common/unittest/itcLockFreeQueueTest/: Makefile.am  itcLockFreeQueueTest.cc
sw/itc-common/unittest/itcLockFreeQueueTest/itcLockFreeQueueOnPOSIXSharedMemoryTest/: Makefile  receiver.cc  sender.cc
sw/itc-common/unittest/itcMailboxRealImpl/: Makefile.am
sw/itc-common/unittest/itcMailboxTest/: Makefile.am  itcMailboxTest.cc
sw/itc-common/unittest/itcMutexTest/: Makefile.am  itcMutexTest.cc
sw/itc-common/unittest/itcSmartContainerTest/: Makefile.am  itcSmartContainerTest.cc
sw/itc-common/unittest/itcSyncObjectRealImpl/: Makefile.am
sw/itc-common/unittest/itcThreadManagerIfMock/: Makefile.am  itcThreadManagerIfMock.cc  itcThreadManagerIfMock.h
sw/itc-common/unittest/itcThreadManagerIfTest/: Makefile.am  itcThreadManagerIfTest.cc
sw/itc-common/unittest/itcThreadPoolTest/: Makefile.am  itcThreadPoolTest.cc
sw/itc-common/unittest/itcTransportLSocketRealImpl/: Makefile.am
sw/itc-common/unittest/itcTransportLSocketTest/: Makefile.am  itcTransportLSocketTest.cc
sw/itc-common/unittest/itcTransportLocalRealImpl/: Makefile.am
sw/itc-common/unittest/itcTransportLocalTest/: Makefile.am  itcTransportLocalTest.cc
sw/itc-common/unittest/itcTransportSysvMsgQueueRealImpl/: Makefile.am
sw/itc-common/unittest/itcTransportSysvMsgQueueTest/: Makefile.am  itcTransportSysvMsgQueueTest.cc
sw/itc-common/unittest/mock/itcCWrapperIfMock/: Makefile.am  itcCWrapperIfMock.h
sw/itc-common/unittest/mock/itcFileSystemIfMock/: Makefile.am
sw/itc-common/unittest/mock/itcThreadManagerIfMock/: Makefile.am  itcThreadManagerIfMock.cc  itcThreadManagerIfMock.h
sw/itc-common/unittest/real/itcMutexRealImpl/: Makefile.am
sw/itc-server/itc-proxy/unittest/: placeHolder.h
unittest/: Makefile.all.suite.includes.am  Makefile.am  Makefile.partial.suite.includes.am  Makefile.specific.suite.includes.am
unittest/coverage/: coverage.info
unittest/coverage/output/: index-sort-f.html  index-sort-l.html  index.html
unittest/coverage/output/if/: index-sort-f.html  index-sort-l.html  index.html  itcFileSystemIf.h.func-sort-c.html  itcFileSystemIf.h.func.html  itcFileSystemIf.h.gcov.html  itcThreadManagerIf.h.func-sort-c.html  itcThreadManagerIf.h.func.html  itcThreadManagerIf.h.gcov.html  itcTransportIf.h.func-sort-c.html  itcTransportIf.h.func.html  itcTransportIf.h.gcov.html
unittest/coverage/output/inc/: index-sort-f.html  index-sort-l.html  index.html  itcFileSystem.h.func-sort-c.html  itcFileSystem.h.func.html  itcFileSystem.h.gcov.html  itcThreadManager.h.func-sort-c.html  itcThreadManager.h.func.html  itcThreadManager.h.gcov.html  itcTransportLSocket.h.func-sort-c.html  itcTransportLSocket.h.func.html  itcTransportLSocket.h.gcov.html  itcTransportLocal.h.func-sort-c.html  itcTransportLocal.h.func.html  itcTransportLocal.h.gcov.html
unittest/coverage/output/src/: index-sort-f.html  index-sort-l.html  index.html  itcFileSystem.cc.func-sort-c.html  itcFileSystem.cc.func.html  itcFileSystem.cc.gcov.html  itcMutex.cc.func-sort-c.html  itcMutex.cc.func.html  itcMutex.cc.gcov.html  itcThreadManager.cc.func-sort-c.html  itcThreadManager.cc.func.html  itcThreadManager.cc.gcov.html  itcTransportLSocket.cc.func-sort-c.html  itcTransportLSocket.cc.func.html  itcTransportLSocket.cc.gcov.html  itcTransportLocal.cc.func-sort-c.html  itcTransportLocal.cc.func.html  itcTransportLocal.cc.gcov.html
unittest/valgrind/: memory_leak_report.xml
